<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.darian</groupId>
    <artifactId>thinking-in-spring</artifactId>
    <version>1.0-SNAPSHOT</version>

    <modules>
        <module>02-java-beans-demo</module>
        <module>03-ioc-container-overview</module>
        <module>04-spring-bean</module>
        <module>05-dependency-lookup</module>
        <module>06-dependency-injection</module>
        <module>07-dependence-source</module>
        <module>08-bean-scope</module>
        <module>09-bean-lifecycle</module>
        <module>10-configuration-metadata</module>
    </modules>

    <packaging>pom</packaging>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
        <java.version>1.8</java.version>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>

        <spring.version>5.2.2.RELEASE</spring.version>

        <javax.annotation-api.version>1.3.2</javax.annotation-api.version>
        <javax.inject.version>1</javax.inject.version>
        <javax.servlet-api.version>3.1.0</javax.servlet-api.version>

        <spring-cloud-commons.version>2.2.0.RELEASE</spring-cloud-commons.version>
        <spring-cloud-context.version>2.2.0.RELEASE</spring-cloud-context.version>
    </properties>

    <!-- Spring 依赖管理 -->
    <dependencyManagement>
        <dependencies>

            <!-- JSR 3.0 一样的 -->
            <dependency>
                <groupId>javax.inject</groupId>
                <artifactId>javax.inject</artifactId>
                <version>${javax.inject.version}</version>
            </dependency>

            <dependency>
                <groupId>javax.annotation</groupId>
                <artifactId>javax.annotation-api</artifactId>
                <version>${javax.annotation-api.version}</version>
            </dependency>
            <dependency>
                <groupId>javax.servlet</groupId>
                <artifactId>javax.servlet-api</artifactId>
                <version>${javax.servlet-api.version}</version>
            </dependency>

            <!---->

            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-commons</artifactId>
                <version>${spring-cloud-commons.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-context</artifactId>
                <version>${spring-cloud-context.version}</version>
            </dependency>

            <!---->


            <!--            <dependency>-->
            <!--                <groupId>com.darian</groupId>-->
            <!--                <artifactId>05-dependency-lookup</artifactId>-->
            <!--                <version>1.0-SNAPSHOT</version>-->
            <!--            </dependency>-->
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-context</artifactId>
                <version>${spring.version}</version>
            </dependency>

            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-jdbc</artifactId>
                <version>${spring.version}</version>
            </dependency>

            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-webflux</artifactId>
                <version>${spring.version}</version>
            </dependency>

            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-webmvc</artifactId>
                <version>${spring.version}</version>
            </dependency>

        </dependencies>
    </dependencyManagement>

    <!-- Spring 依赖 -->
    <dependencies>
        <!-- Spring IoC 核心依赖 -->
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-context</artifactId>
        </dependency>

        <dependency>
            <groupId>javax.annotation</groupId>
            <artifactId>javax.annotation-api</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-jdbc</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-webmvc</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-webflux</artifactId>
        </dependency>

        <dependency>
            <groupId>javax.inject</groupId>
            <artifactId>javax.inject</artifactId>
        </dependency>
    </dependencies>


    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.6.1</version>
                <configuration>
                    <compilerArgs>
                        <arg>--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED</arg>
                    </compilerArgs>
                    <source>11</source>
                    <target>11</target>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>